--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -4,20 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.cjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^5.1.2",
+    "css-loader": "^5.2.7",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.10.0",
-    "babel-loader": "^8.2.4",
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-loader": "^3.0.4",
-    "eslint-plugin-import": "^2.25.4"
+    "webpack-cli": "^4.10.0"
   }
 }
