--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server --config webpack.config.cjs",
     "build": "webpack --config webpack.config.cjs"
   },
   "keywords": [],
@@ -16,6 +17,8 @@
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.10.0"
-  }
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.14.0"
+  },
+  "sideEffects": false
 }
